--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/deno": "^5.0.1",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@supabase/supabase-js": "^2.47.10",
     "@types/react": "^19.0.2",
     "astro": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "lucide-react": "^0.469.0",
     "nanostores": "^0.11.3",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
