--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -16,13 +17,15 @@
     "@supabase/supabase-js": "^2.47.10",
     "@types/react": "^19.0.2",
     "astro": "^5.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "lucide-react": "^0.469.0",
     "nanostores": "^0.11.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
