--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vercel": "^8.0.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.47.10",
