--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "drizzle-zod": "^0.6.1",
     "lucide-react": "^0.469.0",
     "nanostores": "^0.11.3",
     "postgres": "^3.4.5",
